tests/netgen/spider/errors/radius_9_9/options.netgen
--spider --radius 9.9 -o net.net.xml
